updated yaml file

--- a/Python_course/.github/workflows/push.yaml
+++ b/Python_course/.github/workflows/push.yaml
@@ -9,21 +9,21 @@ jobs:
    steps:
      - uses: actions/checkout@v2
      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event"
-     - run: Task1.py
-     - run: Task2.py
-     - run: Task3.py
-     - run: Task4.py
-     - run: Task5.py
-     - run: Task6.py
-     - run: Task7.py
-     - run: Task8.py
-     - run: Task9.py
-     - run: Task10.py
-     - run: Task11.py
-     - run: Task12.py
-     - run: Task13.py || true
-     - run: Task14.py
-     - run: Task15.py
-     - run: Task16.py
-     - run: Task17.py
-     - run: Task18.py
+     - run: python Task1.py
+     - run: python Task2.py
+     - run: python Task3.py
+     - run: python Task4.py
+     - run: python Task5.py
+     - run: python Task6.py
+     - run: python Task7.py
+     - run: python Task8.py
+     - run: python Task9.py
+     - run: python Task10.py
+     - run: python Task11.py
+     - run: python Task12.py
+     - run: python Task13.py || true
+     - run: python Task14.py
+     - run: python Task15.py
+     - run: python Task16.py
+     - run: python Task17.py
+     - run: python Task18.py
