--- a/Python_course/.github/workflows/push.yaml
+++ b/Python_course/.github/workflows/push.yaml
@@ -1,11 +1,8 @@
 name: Git Actions Demo
-on: [push]
+on: [ push ]
 jobs:
  Explore-GitHub-Actions:
-   runs-on: ${{ matrix.os }}
-   strategy:
-    matrix:
-      os: [ubuntu-latest, windows-latest, macos-latest]
+   runs-on: windows-latest
    steps:
      - uses: actions/checkout@v2
      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event"
